# ai_dropshipping

aliexpress_scraper/: .gitignore  AI_SYSTEM_README.md  README.md  TROUBLESHOOTING.md  aliexpress_wireless-earbuds.json  analyze_structure.py  debug_data.json  debug_response.html  debug_script.js  debug_search.py  earbuds.json  earbuds_price_test.json  earbuds_sf.csv  earbuds_sf.json  improved_scraper_functions.py  pyproject.toml  scrapfly_adapter_fixed.py  start_system.py  test_ai_integration.py  test_product.py  test_product_simple.py
aliexpress_scraper/docs/: TROUBLESHOOTING.md
aliexpress_scraper/examples/: example_usage.py
aliexpress_scraper/public/: app.js  index.html
aliexpress_scraper/src/aliexpress_scraper/: __init__.py  __main__.py  browser_manager.py  cli.py  config.py  exceptions.py  logger.py  main.py  models.py  output.py  output_helpers.py  parsers.py  product.py  scrapfly_adapter.py  scrapfly_adapter_clean.py  search.py  seller.py  server.py  utils.py  web.py
aliexpress_scraper/src/aliexpress_scraper/tests/: test_parsers.py  test_smoke.py
