[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aliexpress_scraper"
version = "0.1.0"
description = "AliExpress scraper using Scrapfly with CLI and API"
readme = "README.md"
authors = [{ name = "Your Name" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["aliexpress", "scraper", "scrapfly", "async", "ecommerce"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Topic :: Internet :: WWW/HTTP",
]

# Minimal runtime deps; keep widely used libs only
dependencies = [
  "scrapfly-sdk>=0.8,<1.0",
  "parsel>=1.9,<2.0",
  "requests>=2.31,<3.0",
  "google-generativeai>=0.8.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4,<9.0",
  "pytest-asyncio>=0.23,<0.24",
  "mypy>=1.6,<2.0",
  "flake8>=6.1,<8.0",
  "black>=23.7,<25.0",
  "isort>=5.12,<6.0",
]

[project.scripts]
aliexpress-scraper = "aliexpress_scraper.cli:main"
aliexpress-web = "aliexpress_scraper.web:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
